# haskell-tic-tac-toe

./: Guardfile  README.md  stack.yaml  tic-tac-toe.cabal  ttt
.stack-work/install/x86_64-osx/lts-5.13/7.10.3/doc/tic-tac-toe-0.1.0.0/: LICENSE
.stack-work/install/x86_64-osx/lts-5.13/7.10.3/flag-cache/: tic-tac-toe-0.1.0.0-1313bc0815957c648c36ece8750512a4
.stack-work/install/x86_64-osx/lts-5.13/7.10.3/lib/x86_64-osx-ghc-7.10.3/tic-tac-toe-0.1.0.0-DOSw0Xd6AgmHyP3uFUQ2Wv/: libHStic-tac-toe-0.1.0.0-DOSw0Xd6AgmHyP3uFUQ2Wv-ghc7.10.3.dylib
.stack-work/install/x86_64-osx/lts-5.13/7.10.3/lib/x86_64-osx-ghc-7.10.3/tic-tac-toe-0.1.0.0-DOSw0Xd6AgmHyP3uFUQ2Wv/Data/String/: Strip.dyn_hi
.stack-work/install/x86_64-osx/lts-5.13/7.10.3/pkgdb/: package.cache  tic-tac-toe-0.1.0.0-1313bc0815957c648c36ece8750512a4.conf
app/: Main.hs
src/: Main.hi  Main.hs
src/Console/: Driver.hi  Driver.hs
src/Data/String/: Strip.hi
src/Game/: AIPlayer.hs  Board.hs  Context.hs  Player.hs
test/: SpecHelper.hs
test/Data/String/: StripSpec.hs
test/Game/: AIPlayerSpec.hs  BoardSpec.hs  ContextSpec.hs  PlayerSpec.hs
