name:                tic-tac-toe
version:             0.1.1.0
synopsis:            Initial project template from stack, using hspec and quickcheck
description:         Please see README.md
homepage:            https://github.com/rewinfrey/tic-tac-toe#readme
license:             BSD3
license-file:        LICENSE
author:              Rick Winfrey
maintainer:          rick.winfrey@gmail.com
copyright:           2016
category:            Personal
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Game.Context
                     , Game.Player
                     , Game.Board
                     , Console.Driver
  build-depends:       base >= 4.7 && < 5
                     , matrix
                     , vector
                     , process
  default-language:    Haskell2010

executable tic-tac-toe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , tic-tac-toe
  default-language:    Haskell2010

test-suite tic-tac-toe-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , matrix
                     , hspec
                     , QuickCheck
                     , tic-tac-toe
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rewinfrey/tic-tac-toe
